--- a/my_serials/static/dark-mode.css
+++ b/my_serials/static/dark-mode.css
@@ -36,3 +36,17 @@
   background-color: #333 !important;
 }
 
+[data-theme="dark"] .card {
+  background-color: #333 !important;
+}
+
+[data-theme="dark"] .modal-content {
+  background-color: #333 !important;
+  border: 1px solid #fff !important;
+}
+
+[data-theme="dark"] .close {
+  color: #fff !important;
+  text-shadow: 0 1px 0 #000 !important;
+}
+
