--- a/my_serials/static/sticky-footer-navbar.css
+++ b/my_serials/static/sticky-footer-navbar.css
@@ -3,17 +3,20 @@
 html {
   position: relative;
   min-height: 100%;
+
 }
 body {
   /* Margin bottom by footer height */
   margin-bottom: 70px;
+  text-align: left;
+
 }
 .footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  text-align: center;
   /* Set the fixed height of the footer here */
   height: 70px;
   line-height: 60px; /* Vertically center the text there */
-  /* background-color: #f5f5f5; */
+  /*background-color: #333;*/
 }
