--- a/my_serials/templates/serial/details.html
+++ b/my_serials/templates/serial/details.html
@@ -10,8 +10,29 @@
         <div>
             <img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ info.poster_path }}" alt="Generic placeholder image">
             <p>
-            <p>Status: {{ info.status }}</p>
-            <p>Rating: {{ info.vote_average }}</p>
+                {% if info.in_production %}
+                    <div class="alert alert-success mr-3 text-center" role="alert">
+                        {{ info.status }}
+                    </div>
+                    {% if serial_id %}
+                        <div class="text-center mb-3 mr-3">
+                            <a href="{% url 'my_serials:delete' %}{{ serial_id }}" class="btn btn-danger" role="button">Remove Serial</a>
+                        </div>
+                    {% else %}
+                        <form action="add/" method = "POST">
+                            {% csrf_token %}
+                            <div class="text-center mb-3 mr-3">
+                                <button type="submit" name="serial_id" value="{{ info.id }}" class="btn btn-success" onclick="return confirm('Add Serial to your List?')">Add to my List</button>
+                            </div>
+                        </form>
+                    {% endif %}
+                {% else %}
+                    <div class="alert alert-warning mr-3 text-center" role="alert">
+                        {{ info.status }}
+                    </div>
+                {% endif %}
+                <p>Rating: {{ info.vote_average }}</p>
+
             </p>
         </div>
         <div class="media-body">
@@ -20,25 +41,16 @@
               <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-overview-tab" data-toggle="tab" href="#nav-overview" role="tab" aria-controls="nav-overview" aria-selected="true">Overview</a>
                 <a class="nav-item nav-link" id="nav-cast-tab" data-toggle="tab" href="#nav-cast" role="tab" aria-controls="nav-cast" aria-selected="false">Cast</a>
-                <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Creators</a>
+                <a class="nav-item nav-link" id="nav-creators-tab" data-toggle="tab" href="#nav-creators" role="tab" aria-controls="nav-creators" aria-selected="false">Creators</a>
               </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-overview" role="tabpanel" aria-labelledby="nav-overview-tab">
-                    <p></p>
+                    <br>
                     <p>{{ info.overview }}</p>
                 </div>
                 <div class="tab-pane fade" id="nav-cast" role="tabpanel" aria-labelledby="nav-cast-tab">
-                    <p></p>
-<!--                    {% if cast %}-->
-<!--                        {% for member in cast %}-->
-<!--                            <img class="img-thumbnail" src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" alt="">-->
-<!--                            {{ member.name }}-->
-<!--                            {% if member.character %}-->
-<!--                                as {{ member.character }}-->
-<!--                            {% endif %}-->
-<!--                        {% endfor %}-->
-<!--                    {% endif %}-->
+                    <br>
                     <div class="card-deck justify-content-center">
                         {% if cast %}
                             {% for member in cast %}
@@ -58,89 +70,92 @@
                     </div>
 
                 </div>
-                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                    {% if info.created_by %}
-                        {% for member in info.created_by %}
-                            <p>{{ member.name }}</p>
-                        {% endfor %}
-                    {% endif %}
+                <div class="tab-pane fade" id="nav-creators" role="tabpanel" aria-labelledby="nav-creators-tab">
+                    <br>
+                    <div class="card-deck justify-content-center">
+                        {% if info.created_by %}
+                            {% for member in info.created_by %}
+                                <div class="card mb-3" style="width: 135px; min-width: 135px; max-width: 135px;">
+                                    <img src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" class="card-img-top" alt="">
+                                    <div class="card-body">
+                                        <div class="card-text">
+                                            <b>{{ member.name }}</b>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 <hr class="mt-2 mb-4">
 
 <div class="mt-3 mb-3">
     <h2>Seasons</h2>
 </div>
+
+
 {% for season in seasons %}
-    {% if season.poster_path %}
-        <p><img src='https://image.tmdb.org/t/p/w200{{ season.poster_path }}'></p>
-    {% else %}
-        <p><img src="{% static 'resources/no-poster-available.png' %}" width="200px"></p>
-    {% endif %}
-    <p>Air date {{ season.air_date }}</p>
-    <p>Season number {{ season.season_number }}</p>
-    <p>Episode count {{ season.episode_count }}</p>
-    <p>Name {{ season.name }}</p>
-    <p>Overview {{ season.overview }}</p>
+    <div class="media">
+        <div>
+            {% if season.poster_path %}
+                <p><img class="align-self-start mr-3" src='https://image.tmdb.org/t/p/w200{{ season.poster_path }}'></p>
+            {% else %}
+                <p><img class="align-self-start mr-3" src="{% static 'resources/no-poster-available.png' %}" width="200px"></p>
+            {% endif %}
+            <p>
+                <div class="text-center mr-3">
+                    <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">
+                        Episodes
+                    </button>
+                </div>
+            </p>
+        </div>
+        <div class="media-body">
+            <h3 class="mt-0" align="center">{{ season.name }}</h3>
+                <p>Air date: {{ season.air_date }}</p>
+                <p>Season number: {{ season.season_number }}</p>
+                <p>Episode count: {{ season.episode_count }}</p>
+                {% if season.overview %}
+                    <p>{{ season.overview }}</p>
+                {% endif %}
+        </div>
+    </div>
 
-    {% for episode in season.episodes %}
-        <p>{{ episode.air_date }}</p>
-        <p>{{ episode.episode_number }}</p>
-        <p>{{ episode.name }}</p>
-        <p>{{ episode.overview }}</p>
-    <hr class="mt-2 mb-4">
-    {% endfor %}
+    <div class="collapse" id="collapse{{ season.season_number }}">
+        <div class="card card-body">
+            {% for episode in season.episodes %}
+                <div class="media">
+                    <div>
+                        {% if episode.still_path %}
+                            <p><img class="align-self-start mr-3" src='https://image.tmdb.org/t/p/w227_and_h127_bestv2{{ episode.still_path }}'></p>
+                        {% else %}
+                            <p><img class="align-self-start mr-3" src="{% static 'resources/no_image.jpg' %}"></p>
+                        {% endif %}
+                    </div>
+                    <div class="media-body">
+                        <h3 class="mt-0" align="center">{{ episode.name }}</h3>
+                        <p>{{ episode.air_date }}</p>
+                        <p>{{ episode.episode_number }}</p>
+                        <p>{{ episode.overview }}</p>
+                        <p>{{ episode.vote_average }}</p>
+                        <div class="text-right">
+                            <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">close</button>
+                        </div>
+                    </div>
+                </div>
+            <hr class="mt-2 mb-4">
+            {% endfor %}
+            <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">
+                close
+            </button>
+        </div>
+        <br>
+    </div>
+<hr class="mt-2 mb-4">
+
 {% endfor %}
-
-
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          Collapsible Group Item #1
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
-        </button>
-      </h5>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Collapsible Group Item #3
-        </button>
-      </h5>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-</div>
-
 
 {% endblock %}
